<resources>
    <string name="app_name">BusinessCard</string>
    <string name="violin">violin</string>

    <string name="the_source_for_classical_music">The Source for Classical Music</string>
    <string name="variation">Variation</string>
    <string name="_3456_rachmaninov_st">3456 Rachmaninov St</string>
    <string name="gr_nburg_da_54321">Grünburg, DA 54321</string>
    <string name="_985_985_8888">985 985 8888</string>
    <string name="www_variation_com">www.variation.com</string>
    <string name="store_opening_hours">Store opening hours:</string>
    <string name="monday_sunday_10am_5pm">Monday-Sunday 10am-5pm</string>
    <string name="violino">violino</string>
</resources>
